--- a/templates/base.html
+++ b/templates/base.html
@@ -1,65 +1,73 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-5" />
     <meta name="viewport" content="initial-scale=1" />
-    <link rel="stylesheet" href="{%static 'bootstrap/css/bootstrap.min.css'%}" />
-    <link rel="icon" type="image/png" href="{% static 'images/favicon.ico' %}" />
+    <link
+      rel="stylesheet"
+      href="{%static 'bootstrap/css/bootstrap.min.css'%}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="{% static 'images/favicon.ico' %}"
+    />
     <link rel="stylesheet" href="{%static 'css/home.css'%}" />
     <link rel="stylesheet" href="{%static 'css/responsive.css'%}" />
     <link rel="stylesheet" href="{%static 'css/all.css'%}" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <script src="{%static 'bootstrap/js/jqureyslim.js'%}"></script>
     <script src="{%static 'bootstrap/js/bootstrap.min.js'%}"></script>
-</head>
+    {% block title %} {% endblock title %}
+  </head>
 
-<body>
-    <nav class="navbar navbar-expand-md navbar-light navFadeInDown nav-fluid">
-        <div class="container-fluid">
-            <a class="navbar-brand navbandastyle" href="#"> Lash Goldberg </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <body>
+    <nav
+      class="navbar navbar-expand-md navbar-light animate__animated animate__fadeInDown nav-fluid"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand navbandastyle" href="#"> Lash Goldberg </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-uppercase navlia" href="#">Who We are</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-uppercase navlia" href="#">What We Do
-                        </a>
-                    </li>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link text-uppercase navlia" href="#">Who We are</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-uppercase navlia" href="#">What We Do </a>
+            </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link text-uppercase navlia" href="#">
-                          Our Team
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-uppercase navlia" href="#"> What's New</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-uppercase navlia" href="#"> Where We Are</a>
-                    </li>
-                </ul>
-            </div>
+            <li class="nav-item">
+              <a class="nav-link text-uppercase navlia" href="#"> Our Team </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-uppercase navlia" href="#"> What's New</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-uppercase navlia" href="#">
+                Where We Are</a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-    <section>
-        <div class="container-fluid p-0 featured-image">
-            <div class="row x">
-                <div class="col">
-                    <img class="img-fluid img-top-first-md" src="{% static 'images/law360.jpg' %}" alt="" style="width: 100%;" />
-                    <img class="img-fluid img-top-first-sm" src="{% static 'images/law360.jpg' %}" alt="" style="width: 100%;" />
-                    <div class="img-overlay">
-                        <a href="https://www.law360.com/articles/1113703/health-care-group-of-the-year-lash-goldberg" class="btn btn-md btn-readmore">Read More</a>
-                    </div>
-                </div>
-            </div>
-    </section>
 
-</body>
-
+    {% block container %} {% endblock container %}
+  </body>
 </html>
