--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
   <body>
     <nav
-      class="navbar navbar-expand-md navbar-light animate__animated animate__fadeInDown nav-fluid"
+      class="navbar navbar-expand-md navbar-light fixed-top animate__animated animate__fadeInDown nav-fluid"
     >
       <div class="container-fluid">
         <a class="navbar-brand navbandastyle" href="#"> Lash Goldberg </a>
