--- a/static/css/home.css
+++ b/static/css/home.css
@@ -15,27 +15,31 @@
 
 nav {
     background: rgba(255, 255, 255, 0.9);
-    clear: both;
-    display: block;
+    /*clear: both;
+    display: block*/;
     height: 93px;
-    position: fixed !important;
+    /*position: fixed !important;
     top: 0;
     z-index: 998;
     padding: 0;
     left: 0;
     right: 0;
-    margin: 0;
+    margin: 0;*/
 }
 
 .featured-image {
-    background: url("/static/images/bg_h1.jpg") no-repeat 50% 50% !important;
-    position: absolute;
+    background: url("/static/images/bg_h1.jpg") no-repeat 50% 50% fixed;;
+    /*position: absolute;	
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background: no-repeat 50% 50% fixed;
-    width: 100%;
+	width: 100%;
+	-webkit-background-size: cover;
+	background-attachment: scroll;*/
+	background-size:cover;
+  	background-position:center;
+	
 }
 
 .navbar-light .navbar-brand {
