--- a/templates/home.html
+++ b/templates/home.html
@@ -1,31 +1,37 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block title %}
-    <title>Miami Litigation Attorneys | Lash Goldberg</title>
-{% endblock title %}
-
-{% block container %}
+{% extends 'base.html' %} {% load static %} {% block title %}
+<title>Miami Litigation Attorneys | Lash Goldberg</title>
+{% endblock title %} {% block container %}
 <section>
-    <div class="container-fluid p-0 featured-image">
-        <div class="row x">
-            <div class="col">
-                <img class="img-fluid img-top-first-md" src="{% static 'images/law360.jpg' %}" alt=""
-                    style="width: 100%;" />
-                <img class="img-fluid img-top-first-sm" src="{% static 'images/law360.jpg' %}" alt=""
-                    style="width: 100%;" />
-                <div class="img-overlay">
-                    <a href="https://www.law360.com/articles/1113703/health-care-group-of-the-year-lash-goldberg"
-                        class="btn btn-md btn-readmore">Read More</a>
+    <div class="container-fluid p-0">
+        <div class="featured-image" style="width: 100%;height: 100vh;">
+            
+            <div class="row">
+                <div class="col">
+                    <img class="img-fluid img-top-first-md" src="{% static 'images/law360.jpg' %}" alt="" style="width: 100%;" />
+                    <img class="img-fluid img-top-first-sm" src="{% static 'images/law360.jpg' %}" alt="" style="width: 100%;" />
+                    <div class="img-overlay">
+                        <a href="https://www.law360.com/articles/1113703/health-care-group-of-the-year-lash-goldberg" class="btn btn-md btn-readmore">Read More</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <a href="#" style="margin-left: 50%;"><i style="color: #ffff;font-size:30px;margin-top:10%" class="btn-down fas fa-arrow-circle-down animate__animated animate__bounce animate__infinite infinite animate__slow 1s"></i>
+            <div class="row" >
+                <div class="col">
+                    <a href="#" style="margin-left: 50%;"><i style="color: #ffff;font-size:30px;margin-top:10%" class="btn-down fas fa-arrow-circle-down animate__animated animate__bounce animate__infinite infinite animate__slow 1s"></i>
                 </a>
+                </div>
+            </div>
+            
+        </div>
+        <div class="row" style="background: #EEF2F7;">
+            <div class="col">
+                <p>
+                    Lash & Goldberg has become a firm of choice for corporate counsel, executives and professionals seeking
+                    sophisticated litigation and dispute resolution counsel.
+                </p>
             </div>
         </div>
+    </div>
+
+    
 </section>
 {% endblock container %}
-        
