--- a/templates/home.html
+++ b/templates/home.html
@@ -7,31 +7,94 @@
             
             <div class="row">
                 <div class="col">
-                    <img class="img-fluid img-top-first-md" src="{% static 'images/law360.jpg' %}" alt="" style="width: 100%;" />
-                    <img class="img-fluid img-top-first-sm" src="{% static 'images/law360.jpg' %}" alt="" style="width: 100%;" />
+                    <img class="img-fluid img-top-first-md" src="{% static 'images/law360.jpg' %}" alt="" style="width: 100%;background: #fff;padding-left: 15px;" />
+                    <img class="img-fluid img-top-first-sm" src="{% static 'images/law360.jpg' %}" alt="" style="width: 100%;background: #fff;padding-left: 15px;" />
                     <div class="img-overlay">
                         <a href="https://www.law360.com/articles/1113703/health-care-group-of-the-year-lash-goldberg" class="btn btn-md btn-readmore">Read More</a>
                     </div>
                 </div>
             </div>
-            <div class="row" >
+            <div class="row" style="margin-top: 2rem;">
+                <div class="col text-center animate__animated animate__fadeIn animate__delay-1s">
+                    <h2 style="color: #ffff;vertical-align: middle;font-size: 2em;font-weight: 300;">
+                        Our Business is Understanding <strong>Yours</strong>
+                    </h2>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col">
-                    <a href="#" style="margin-left: 50%;"><i style="color: #ffff;font-size:30px;margin-top:10%" class="btn-down fas fa-arrow-circle-down animate__animated animate__bounce animate__infinite infinite animate__slow 1s"></i>
-                </a>
+                    <a href="#" style="margin-left: 50%;"><i style="color: #ffff;font-size:30px;margin-top:8%"
+                            class="btn-down fas fa-arrow-circle-down animate__animated animate__bounce animate__infinite infinite animate__slow 1s"></i>
+                    </a>
                 </div>
             </div>
             
         </div>
-        <div class="row" style="background: #EEF2F7;">
-            <div class="col">
-                <p>
+        <div class="row d-flex justify-content-center" style="background: #EEF2F7;padding-top: 30vh;padding-bottom: 30vh;">
+            <div class="col-10">
+                <p class="text-center animate__animated animate__fadeIn animate__delay-1s">
                     Lash & Goldberg has become a firm of choice for corporate counsel, executives and professionals seeking
                     sophisticated litigation and dispute resolution counsel.
                 </p>
             </div>
         </div>
-    </div>
-
-    
+        <div class="row banner-image2">
+            <div class="col justify-content-center d-flex align-items-center animate__animated animate__fadeIn animate__delay-1s" style="height: 95vh;">
+                <h2 class="text-center" style="color: #ffff;vertical-align: middle;font-size: 2.5em;font-weight: 300;">
+                    There is a Big Picture and <strong>We See It.</strong>.
+                </h2>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center" style="background: #EEF2F7;padding-top: 30vh;padding-bottom: 30vh;">
+            <div class="col-10">
+                <p class="text-center animate__animated animate__fadeIn animate__delay-1s">
+                    By listening to what is important, providing practical advice and preparing a
+                    formidable case, we have forged long-term relationships with industry leaders and
+                    delivered consistent results.
+                </p>
+            </div>
+        </div>
+        <div class="row banner-image3">
+            <div class="col justify-content-center d-flex align-items-center animate__animated animate__fadeIn animate__delay-1s"
+                style="height: 95vh;">
+                <h2 class="text-center" style="color: #ffff;vertical-align: middle;font-size: 2.5em;font-weight: 300;">
+                    Partnering With Market <strong>Leaders</strong>.
+                </h2>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center" style="background: #EEF2F7;padding-top: 30vh;padding-bottom: 30vh;">
+            <div class="col-10">
+                <p class="text-center animate__animated animate__fadeIn animate__delay-1s">
+                    Lash & Goldberg has represented some of the largest companies in major cases for years. Our continued
+                    representation of business leaders in a variety of industries is a testament to our success.
+                </p>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center" style="background: #EEF2F7;padding-top: 30vh;padding-bottom: 30vh;">
+            <div class="col-10">
+                <p class="text-center animate__animated animate__fadeIn animate__delay-1s">
+                    The firm was founded upon the principles of unwavering client service, a tireless work ethic,
+                    sound judgment, and the highest quality written and courtroom skills. The firm’s lawyers have
+                    worked together as a team for years to meet and exceed these expectations and achieve
+                    our clients’ long-term confidence.
+                </p>
+            </div>
+        </div>
+        <div class="row banner-image4">
+            <div class="col justify-content-center d-flex align-items-center animate__animated animate__fadeIn animate__delay-1s"
+                style="height: 70vh;">
+                <h2 class="text-center" style="color: #ffff;vertical-align: middle;font-size: 2.5em;font-weight: 300;">
+                    We Look Forward To Working With <strong>You</strong>.
+                </h2>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center" style="background: #EEF2F7;padding-top: 25vh;padding-bottom: 25vh;">
+            <div class="col-10">
+                <p class="text-center animate__animated animate__fadeIn animate__delay-1s">
+                Learn more about what we do, who we are, and where we are.
+                </p>
+            </div>
+        </div>
+    </div>  
 </section>
 {% endblock container %}
