--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -1,11 +1,30 @@
-@media only screen and (max-width: 986px) {
+@media only screen and (max-width: 1281px) {
+  .img-top-first-md,
+  .img-top-first-sm {
+    margin-top: 93px;
+  }
+  .img-overlay {
+    height: 107%;
+  }
+}
+@media only screen and (max-width: 1040px) {
   .navlia {
     padding-left: 0px !important;
   }
 }
+@media only screen and (max-width: 840px) {
+  .navlia {
+    font-size: 13px;
+    letter-spacing: -1px;
+  }
+}
+
 @media only screen and (max-width: 767px) {
   nav {
     background: #ffff !important;
+  }
+  h2{
+    font-size: 30px;
   }
   .img-top-first-md {
     display: none;
@@ -29,9 +48,13 @@
   .nav-fluid {
     padding: 0px !important;
   }
-  .navbandastyle {
+  .navlia {
+    font-size: 13px;
+    letter-spacing: 0px;
+  }
+  .navbandastyle
+  {
     padding-left: 15px;
-    font-size: 30px;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -43,12 +66,4 @@
   }
 }
 
-@media only screen and (max-width: 1281px) {
-  .img-top-first-md,
-  .img-top-first-sm {
-    margin-top: 93px;
-  }
-  .img-overlay {
-    height: 107%;
-  }
-}
+
