--- a/templates/home.html
+++ b/templates/home.html
@@ -88,10 +88,10 @@
                 </h2>
             </div>
         </div>
-        <div class="row d-flex justify-content-center" style="background: #EEF2F7;padding-top: 25vh;padding-bottom: 25vh;">
+        <div class="row d-flex justify-content-center learn-more" style="background: #EEF2F7;padding-top: 25vh;padding-bottom: 25vh;">
             <div class="col-10">
-                <p class="text-center animate__animated animate__fadeIn animate__delay-1s">
-                Learn more about what we do, who we are, and where we are.
+                <p class="text-center animate__animated animate__fadeIn animate__delay-1s" style="font-size: 1.5rem;">
+                Learn more about <a href="#">what we do</a>, <a href="#">who we are</a>, and <a href="#">where we are</a>.
                 </p>
             </div>
         </div>
