--- a/templates/base.html
+++ b/templates/base.html
@@ -71,5 +71,48 @@
     </nav>
 
     {% block container %} {% endblock container %}
+    <!--
+    <footer>
+      <div class="container">
+        <div class="row" style="padding-top: 2rem;">
+          <div class="col " id="footerNav" aria-label="Footer Navigation">
+            <ul style="font-size: 12px;" class="text-uppercase d-flex justify-content-center">
+              <li>© 2014–2020 Lash & Goldberg LLP. All rights reserved.</li>
+    
+              <li class="sep"></li>
+    
+              <li><a href="#">Sitemap</a></li>
+    
+              <li class="sep"></li>
+    
+              <li><a href="#">Disclaimer</a></li>
+              <li class="sep"></li>
+              <li><a href="#">A PaperStreet Web Design</a></li>
+            </ul>
+          </div>
+          
+        </div>
+        <section class="content" aria-label="The Fine Print">
+          <span class="copyright">© 2020 Grossman LLP. All Rights Reserved.</span>
+    
+          <p class="smallTxt">Attorney Advertising.</p>
+        </section>
+      </div>
+    </footer>
+  -->
+  <footer id="footer">
+    <div class="container">
+      <p>&copy; 2014&ndash;2020 Lash &amp; Goldberg LLP. All rights reserved.<span>|</span> <a
+          href="/sitemap/">Sitemap</a> <span>|</span> <a href="/disclaimer/">Disclaimer</a> <span>|</span> <a
+          href="https://www.paperstreet.com" target="_blank">A PaperStreet Web Design</a></p>
+      <ul>
+        <li><a href="/offices/miami/">Miami</a></li>
+        <li><a href="/offices/fort-lauderdale/">Fort Lauderdale</a></li>
+        <li><a href="/offices/tampa/">Tampa</a></li>
+        <!-- <li><a href="/offices/tallahassee2/">Tallahassee</a></li> -->
+      </ul>
+    </div>
+    <!-- / container -->
+  </footer>
   </body>
 </html>
