--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,43 +1,48 @@
 /*@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");*/
+
 body {
     font: 20px/30px "Lato", sans-serif;
     color: #626e7d;
     background: #000000;
     -webkit-text-size-adjust: none;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-	font-family: "Lato", sans-serif;
+    font-family: "Lato", sans-serif;
 }
 
 h2 {
-	font-size: 22px;
-	line-height: 40px;
-	color: #00397b;
-	font-weight: 900;
+    font-size: 22px;
+    line-height: 40px;
+    color: #00397b;
+    font-weight: 900;
 }
+
 h3 {
-	font-size: 20px;
-	color: #00397b;
-	font-weight: bold;
+    font-size: 20px;
+    color: #00397b;
+    font-weight: bold;
 }
+
 a {
-	text-decoration: none;
-	color: #234c85;
-	-webkit-transition: all .5s ease;
-	-moz-transition: all .5s ease;
-	transition: all .5s ease;
+    text-decoration: none;
+    color: #234c85;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    transition: all .5s ease;
 }
 
 a:hover,
 a:focus {
-	color: #4d7fb6;
-	text-decoration: underline;
+    color: #4d7fb6;
+    text-decoration: underline;
 }
+
 .container-fluid {
     overflow-x: hidden !important;
 }
@@ -45,7 +50,9 @@ a:focus {
 .container-fluid .row {
     overflow-x: hidden !important;
 }
+
 /*Nav bar*/
+
 .navbandastyle {
     font-family: "Lato", sans-serif;
     color: #234c85;
@@ -56,6 +63,7 @@ nav {
     background: rgba(255, 255, 255, 0.9);
     height: 93px;
 }
+
 .navbar-light .navbar-brand {
     color: #234c85;
 }
@@ -72,7 +80,9 @@ nav {
     padding-left: 42px !important;
     /*letter-spacing: -1px;*/
 }
+
 /*Home Page*/
+
 .img-overlay {
     position: absolute;
     top: 0;
@@ -113,6 +123,7 @@ nav {
 p {
     color: #00397b;
 }
+
 .featured-image {
     background: url("/static/images/bg_h1.jpg") no-repeat 50% 50% fixed;
     background-attachment: scroll;
@@ -120,91 +131,173 @@ p {
     background-position: center;
 }
 
-.banner-image2
-{
+.banner-image2 {
     background: url("/static/images/bg_h2.jpg") no-repeat 50% 50% fixed;
     background-attachment: scroll;
     background-size: cover;
     background-position: center;
 }
-.banner-image3
-{
+
+.banner-image3 {
     background: url("/static/images/bg_h3.jpg") no-repeat 50% 50% fixed;
     background-attachment: scroll;
     background-size: cover;
     background-position: center;
 }
-.banner-image4
-{
+
+.banner-image4 {
     background: url("/static/images/bg_h5.jpg") no-repeat 50% 50% fixed;
     background-attachment: scroll;
     background-size: cover;
     background-position: center;
 }
+
 .learn-more p a {
     color: #00a4d3;
     font-weight: 900;
+}
+
+/*Law Firm**************************************/
+
+.banner-image {
+    background: url("/static/images/bg_h1.jpg") no-repeat 50% 50% fixed;
+    background-attachment: scroll;
+    background-size: cover;
+    background-position: center;
+    height: 75vh;
+}
+
+.banner-image:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 75vh;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.banner-image h2 {
+    font-size: 52px;
+}
+
+a.print {
+    float: right;
+    border: 1px solid #a0a7b1;
+    font-size: 11px;
+    color: #626e7d;
+    margin: 62px 0 -50px;
+    line-height: 23px;
+    padding: 0 10px;
+    text-transform: uppercase;
+    width: 135px;
+    text-align: center;
+}
+
+a.print:hover,
+a.print:focus {
+    background: #b3c5db;
+    color: #284c8a;
+    text-decoration: none;
+}
+
+.law_firm_description {
+    background: #EEF2F7;
+    padding: 30px 30px 30px 30px
+}
+
+.law_firm_description h1 {
+    font-size: 26px;
+    line-height: 40px;
+    color: #00397b;
+    font-weight: 900;
+    font-style: normal;
+}
+.law_firm_description h2
+{
+    font-size: 22px;
+line-height: 40px;
+color: #00397b;
+font-weight: 900;
+}
+
+.law_firm_description p {
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: normal;
+    color: #626e7d;
+    line-height: 1.6;
+    margin-bottom: 1.25rem;
+    text-rendering: optimizeLegibility;
+}
+.law_firm_description ul li
+{
+    font-size: 16px;
+    list-style-position: outside;
+    list-style-type: ">";
+    padding: 10px;
 }
 /* Footer
 ------------------------------------------------------------------------------*/
 
 #footer {
-	clear: both;
-	text-align: center;
-	padding: 47px 0;
-	margin-top: 0;
+    clear: both;
+    text-align: center;
+    padding: 47px 0;
+    margin-top: 0;
 }
 
 #footer ul,
 #footer li {
-	display: inline-block;
-	margin: 0;
-	list-style: none;
-	color: #ffffff;
-	font-size: 13px;
-	padding: 0;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+    display: inline-block;
+    margin: 0;
+    list-style: none;
+    color: #ffffff;
+    font-size: 13px;
+    padding: 0;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
-#footer li + li:before {
-	padding: 0 13px;
-	content: "|";
+#footer li+li:before {
+    padding: 0 13px;
+    content: "|";
 }
 
 #footer ul {
-	display: block;
-	padding: 15px;
-	background: url("/static/images/bg_footer.png") no-repeat 50% 0;
+    display: block;
+    padding: 15px;
+    background: url("/static/images/bg_footer.png") no-repeat 50% 0;
 }
 
 #footer li a {
-	color: #ffffff;
+    color: #ffffff;
 }
+
 #footer li a:hover,
 #footer li a:focus {
-	color: #C3C3C3;
+    color: #C3C3C3;
 }
-
 
 #footer p {
-	color: #7d7d7d;
-	font-size: 12px;
-	padding-bottom: 28px;
-	margin: 0;
-	font-weight: normal;
-	text-transform: uppercase;
-	line-height: 14px;
+    color: #7d7d7d;
+    font-size: 12px;
+    padding-bottom: 28px;
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    line-height: 14px;
 }
+
 #footer p a:hover,
 #footer p a:focus {
-	color:#ffffff;
+    color: #ffffff;
 }
 
 #footer span {
-	padding: 0 10px;
+    padding: 0 10px;
 }
 
 #footer p a {
-	color: #7d7d7d;
+    color: #7d7d7d;
 }
