--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link text-uppercase navlia" href="#">Who We are</a>
+              <a class="nav-link text-uppercase navlia" href="{% url 'law_firm' %}">Who We are</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-uppercase navlia" href="#">What We Do </a>
