--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
               <a class="nav-link text-uppercase navlia" href="{% url 'law_firm' %}">Who We are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-uppercase navlia" href="#">What We Do </a>
+              <a class="nav-link text-uppercase navlia" href="{% url 'practices' %}">What We Do </a>
             </li>
 
             <li class="nav-item">
