--- a/templates/Practices.html
+++ b/templates/Practices.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load static %} {% block title %}
-<title>Miami Litigation Law Firm | Lash Goldberg</title>
+<title>Miami Commercial litigation Law Firm | Lash Goldberg</title>
 {% endblock title %} {% block container %}
 <div class="container-fluid p-0">
     <div class="row banner-image">
@@ -13,43 +13,125 @@
         <div class="row">
             <div class="col">
                 <h1 style="text-align: center;padding-top: 1rem;padding-bottom: 1rem;">A NIMBLE LAW FIRM WITH A ROBUST LITIGATION PRACTICE</h1>
-                <p class="text-center">Lash & Goldberg is a Florida-based, boutique law firm with a singular focus: we litigate major commercial cases for
-                leading companies in key industries. We possess the depth, skill and experience to represent the world’s industry
-                leaders with and against some of the largest law firms. Our success and the longevity of our client relationships are a
-                testament to our strategy and focus. From offices in Miami, Ft. Lauderdale and Tampa, our partners lead a dynamic team
-                of litigators who work closely with in-house counsel, senior business executives and entrepreneurs in Florida and
-                nationwide to deliver practical, strategically sound and results-oriented advice.</p>
+                <p class="text-center">Lash & Goldberg is a Florida-based, boutique law firm with a singular focus: we litigate major commercial cases for leading companies in key industries. We possess the depth, skill and experience to represent the world’s industry leaders
+                    with and against some of the largest law firms. Our success and the longevity of our client relationships are a testament to our strategy and focus. From offices in Miami, Ft. Lauderdale and Tampa, our partners lead a dynamic team
+                    of litigators who work closely with in-house counsel, senior business executives and entrepreneurs in Florida and nationwide to deliver practical, strategically sound and results-oriented advice.</p>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                    <h1 style="text-align: center;padding-top: 1rem;padding-bottom: 1rem;">PRACTICE AREAS</h1>
+                <h1 style="text-align: center;padding-top: 1rem;padding-bottom: 1rem;">PRACTICE AREAS</h1>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-3 col-sm-12 text-center mx-md-5" style="margin-top: 1rem;background: #ffff;">
-                <a href="#" style= padding: 30px;>
-                    Appellate Advocacy
+        <div class="row practiceArea">
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center" style="margin-top: 2rem;">
+                <a href="#" class="d-flex align-items-center justify-content-center">
+                    <span>Appellate Advocacya</span>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-12 text-center mx-md-5" style="margin-top: 1rem;background: #ffff;">
-                <a href="#" style= padding: 30px;>
-                    Appellate Advocacy
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center" style="margin-top: 2rem;">
+                <a href="#" class="d-flex align-items-center justify-content-center">
+                    <span>Arbitration & Alternative Dispute Resolution</span>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-12 text-center mx-md-5" style="margin-top: 1rem;background: #ffff;">
-                <a href="#" style= padding: 30px;>
-                    Appellate Advocacy
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center" style="margin-top: 2rem;">
+                <a href="#" class="d-flex align-items-center justify-content-center">
+                    <span>Appellate Advocacya</span>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-12 text-center mx-md-5" style="margin-top: 1rem;background: #ffff;">
-                <a href="#" style= padding: 30px;>
-                    Appellate Advocacy
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center" style="margin-top: 2rem;">
+                <a href="#" class="d-flex align-items-center justify-content-center">
+                    <span>Appellate Advocacya</span>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-12 text-center mx-md-5" style="margin-top: 1rem;background: #ffff;">
-                <a href="#" style= padding: 30px;>
-                    Appellate Advocacy
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center" style="margin-top: 2rem;">
+                <a href="#" class="d-flex align-items-center justify-content-center">
+                    <span>Appellate Advocacya</span>
+                </a>
+            </div>
+        </div>
+
+    </section>
+    <section class="banner-image5">
+        <div class="row" style="padding:1.5rem 0">
+            <div class="col">
+                <div class="row">
+                    <div class="col">
+                        <h2 class="text-uppercase" style="text-align: center;padding-top: 1rem;padding-bottom: 1rem;color:#ffff">Featured Case Studies</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col mx-sm-5 mx-3">
+                        <div class="card-deck">
+                            <div class="card">
+                                <h3>
+                                    <div class="card-header">
+                                        <a href="#">Company and Its Officers Settle Derivative Action on Favorable Terms
+
+                                        </a>
+                                        <hr style="background-color:#ffff; border-top: 2px solid rgba(0,0,0,.1);">
+                                    </div>
+                                </h3>
+                                <img src="{% static 'images/bg_h4.jpg' %}" class="card-img-top" alt="...">
+                                <div class="card-body">
+
+                                    <p class="card-text">Lash & Goldberg LLP represented a Florida limited liability company and its officers in defense of…</p>
+
+                                </div>
+                            </div>
+                            <div class="card">
+                                <h3>
+                                    <div class="card-header">
+                                        <a href="#">Hospitals Stop the Expansion of a Florida Statute before Appellate Courts
+
+                                        </a>
+                                        <hr style="background-color:#ffff; border-top: 2px solid rgba(0,0,0,.1);">
+                                    </div>
+                                </h3>
+                                <img src="{% static 'images/bg_h2.jpg' %}" class="card-img-top" alt="...">
+                                <div class="card-body">
+
+                                    <p class="card-text">Through three different proceedings, Lash & Goldberg LLP defended hospitals against attempts by patients to expand…</p>
+
+                                </div>
+                            </div>
+                            <div class="card">
+                                <h3>
+                                    <div class="card-header">
+                                        <a href="#">Hospital Successfully Defends Against Suspended Physician’s Claims</a>
+                                        <hr style="background-color:#ffff; border-top: 2px solid rgba(0,0,0,.1);">
+                                    </div>
+                                </h3>
+                                <img src="{% static 'images/bg_h3.jpg' %}" class="card-img-top" alt="...">
+                                <div class="card-body">
+
+                                    <p class="card-text">When a South Florida hospital summarily suspended a physician for impairment, Lash & Goldberg LLP guided…</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" style="margin:2rem 0px;">
+                    <div class="col d-flex justify-content-center">
+                        <a href="#" class="btnr" role="button">
+                            Read More Cases
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="pactice_contact">
+        <div class="row" style="margin:1rem 0px;">
+            <div class="col text-center">
+                <h1>We Look Forward To <strong>Working With You</strong></h1>
+            </div>
+        </div>
+        <div class="row" style="margin:1rem 0px;">
+            <div class="col d-flex justify-content-center">
+                <a href="#" class="btnr" role="button">
+                    Contact Us
                 </a>
             </div>
         </div>
