--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -74,6 +74,10 @@
     margin-top: 93px;
     height: 25vh;
   }
+  .pactice_contact
+  {
+    padding: 4rem 0px;
+  }
 }
 @media only screen and (min-width: 768px) {
   .img-top-first-md {
