--- a/templates/Practices.html
+++ b/templates/Practices.html
@@ -5,7 +5,7 @@
     <div class="row banner-image">
         <div class="col text-center animate__animated animate__fadeIn animate__delay-1s d-flex justify-content-center align-items-center">
             <h2 style="color: #ffff;font-weight: 300;">
-                What We Do
+            What We Do
             </h2>
         </div>
     </div>
@@ -25,7 +25,7 @@
         </div>
         <div class="row practiceArea">
             <div class="col-lg-4 col-md-6 col-sm-12 text-center" style="margin-top: 2rem;">
-                <a href="#" class="d-flex align-items-center justify-content-center">
+                <a href="{% url 'inside_practice' %}" class="d-flex align-items-center justify-content-center">
                     <span>Appellate Advocacya</span>
                 </a>
             </div>
