--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,23 +11,11 @@
     </div>
     <section class="law_firm_description">
         <div class="row">
-            <div class="col-md-8">
-                <div class="row">
-                    <div class="col">
-                        <h1 style="padding-top: 1rem;padding-bottom: 1rem;" class="text-uppercase">What's New</h1>
-                    </div>
-                </div>
+            <div class="col-md-8" id="left_sidebar">
+                {% include 'blog_left_side.html' %}
             </div>
             <div class="col-md-4" id="sidebar">
-                <div class="row">
-                    <div class="col">
-                        <form action="#" class="search" method="get">
-                            <input id="blog-search-input" name="searchTerm" value="" type="text" required="1" placeholder="Type Your Search"
-                                class="placeholder">
-                            <button type="submit" value="" class="button light">Search <i class="fa fa-angle-right"></i></button>
-                        </form>
-                    </div>
-                </div>
+                {% include 'blog_right_sidebar.html' %}
             </div>
         </div>
 
