--- a/templates/home.html
+++ b/templates/home.html
@@ -91,7 +91,8 @@
         <div class="row d-flex justify-content-center learn-more" style="background: #EEF2F7;padding-top: 25vh;padding-bottom: 25vh;">
             <div class="col-10">
                 <p class="text-center animate__animated animate__fadeIn animate__delay-1s" style="font-size: 1.5rem;">
-                Learn more about <a href="#">what we do</a>, <a href="#">who we are</a>, and <a href="#">where we are</a>.
+                    Learn more about <a href="{% url 'practices' %}">what we do</a>, <a href="{% url 'law_firm' %}">who we are</a>, and
+                    <a href="{% url 'offices' %}">where we are</a>.
                 </p>
             </div>
         </div>
