--- a/templates/Attorneys.html
+++ b/templates/Attorneys.html
@@ -12,7 +12,7 @@
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-12 my-3">
-                <a href="#">
+                <a href="{% url 'inside_team' %}">
                     <div class="card">
                         <img class="card-img-top" src="{% static 'images/alan-lash.jpg' %}" alt="Card image cap">
                         <div class="card-body text-center">
